// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render correctly should render correctly with [object Object] 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "backgroundColor": "#8DBE8B",
        "borderColor": "#ffffff00",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "elevation": 0,
        "justifyContent": "center",
        "minWidth": "auto",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 10,
          },
        ]
      }
      testID="ButtonTestID"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "height": 48,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                {
                  "marginHorizontal": 8,
                },
                false,
                {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#2125293d",
                  "lineHeight": 28,
                },
                {
                  "fontFamily": "SourceSansPro-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            dummy text
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should render correctly should render correctly with [object Object] 2`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#F8F9FA",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "elevation": 0,
        "justifyContent": "center",
        "minWidth": "auto",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 10,
          },
        ]
      }
      testID="ButtonTestID"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "height": 48,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                {
                  "marginHorizontal": 8,
                },
                false,
                {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#DEE2E6",
                  "lineHeight": 28,
                },
                {
                  "fontFamily": "SourceSansPro-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            dummy text
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should render correctly should render correctly with [object Object] 3`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      {
        "backgroundColor": "#C4FE7A",
        "borderColor": "#ffffff00",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "elevation": 0,
        "justifyContent": "center",
        "minWidth": "auto",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          {
            "borderRadius": 10,
          },
        ]
      }
      testID="ButtonTestID"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            {
              "height": 48,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              {
                "textAlign": "left",
              },
              [
                {
                  "letterSpacing": 1,
                  "marginHorizontal": 16,
                  "marginVertical": 9,
                  "textAlign": "center",
                },
                {
                  "marginHorizontal": 8,
                },
                false,
                {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                {
                  "fontFamily": "System",
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#283E36",
                  "lineHeight": 28,
                },
                {
                  "fontFamily": "SourceSansPro-SemiBold",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            dummy text
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
